eplaced say with logger.debug and esay with logger.error where appropriate (http://rb.dcache.org/r/706/)